tests/machine/x/kotlin/group_by_multi_join_sort.error
line 29:
OpenJDK 64-Bit Server VM warning: Options -Xverify:none and -noverify were deprecated in JDK 13 and will likely be removed in a future release.
/workspace/mochi/tests/machine/x/kotlin/group_by_multi_join_sort.kt:29:84: error: the integer literal does not conform to the expected type Double
val customer = mutableListOf(Customer(c_custkey = 1, c_name = "Alice", c_acctbal = 100, c_nationkey = 1, c_address = "123 St", c_phone = "123-456", c_comment = "Loyal"))
                                                                                   ^
/workspace/mochi/tests/machine/x/kotlin/group_by_multi_join_sort.kt:33:96: error: the integer literal does not conform to the expected type Double
val lineitem = mutableListOf(Lineitem(l_orderkey = 1000, l_returnflag = "R", l_extendedprice = 1000, l_discount = 0.1), Lineitem(l_orderkey = 2000, l_returnflag = "N", l_extendedprice = 500, l_discount = 0))
                                                                                               ^
/workspace/mochi/tests/machine/x/kotlin/group_by_multi_join_sort.kt:33:187: error: the integer literal does not conform to the expected type Double
val lineitem = mutableListOf(Lineitem(l_orderkey = 1000, l_returnflag = "R", l_extendedprice = 1000, l_discount = 0.1), Lineitem(l_orderkey = 2000, l_returnflag = "N", l_extendedprice = 500, l_discount = 0))
                                                                                                                                                                                          ^
/workspace/mochi/tests/machine/x/kotlin/group_by_multi_join_sort.kt:33:205: error: the integer literal does not conform to the expected type Double
val lineitem = mutableListOf(Lineitem(l_orderkey = 1000, l_returnflag = "R", l_extendedprice = 1000, l_discount = 0.1), Lineitem(l_orderkey = 2000, l_returnflag = "N", l_extendedprice = 500, l_discount = 0))
                                                                                                                                                                                                            ^
/workspace/mochi/tests/machine/x/kotlin/group_by_multi_join_sort.kt:69:44: error: unresolved reference: c_custkey
        __res.add(Result(c_custkey = g.key.c_custkey, c_name = g.key.c_name, revenue = run {
                                           ^
/workspace/mochi/tests/machine/x/kotlin/group_by_multi_join_sort.kt:69:70: error: unresolved reference: c_name
        __res.add(Result(c_custkey = g.key.c_custkey, c_name = g.key.c_name, revenue = run {
                                                                     ^
/workspace/mochi/tests/machine/x/kotlin/group_by_multi_join_sort.kt:72:29: error: unresolved reference. None of the following candidates is applicable because of receiver type mismatch: 
@InlineOnly public inline operator fun <@OnlyInputTypes K, V> Map<out String, Any?>.get(key: String): Any? defined in kotlin.collections
        __res.add((toDouble((x as MutableMap<*, *>)["l"]["l_extendedprice"]) * toDouble((1 - toInt((x as MutableMap<*, *>)["l"]["l_discount"]))) as MutableMap<String, Any?>))
                            ^
/workspace/mochi/tests/machine/x/kotlin/group_by_multi_join_sort.kt:72:57: error: no get method providing array access
        __res.add((toDouble((x as MutableMap<*, *>)["l"]["l_extendedprice"]) * toDouble((1 - toInt((x as MutableMap<*, *>)["l"]["l_discount"]))) as MutableMap<String, Any?>))
                                                        ^
/workspace/mochi/tests/machine/x/kotlin/group_by_multi_join_sort.kt:72:78: error: none of the following functions can be called with the arguments supplied: 
public final operator fun times(other: Byte): Double defined in kotlin.Double
public final operator fun times(other: Double): Double defined in kotlin.Double
public final operator fun times(other: Float): Double defined in kotlin.Double
public final operator fun times(other: Int): Double defined in kotlin.Double
public final operator fun times(other: Long): Double defined in kotlin.Double
public final operator fun times(other: Short): Double defined in kotlin.Double
        __res.add((toDouble((x as MutableMap<*, *>)["l"]["l_extendedprice"]) * toDouble((1 - toInt((x as MutableMap<*, *>)["l"]["l_discount"]))) as MutableMap<String, Any?>))
                                                                             ^
/workspace/mochi/tests/machine/x/kotlin/group_by_multi_join_sort.kt:72:100: error: unresolved reference. None of the following candidates is applicable because of receiver type mismatch: 
@InlineOnly public inline operator fun <@OnlyInputTypes K, V> Map<out String, Any?>.get(key: String): Any? defined in kotlin.collections
        __res.add((toDouble((x as MutableMap<*, *>)["l"]["l_extendedprice"]) * toDouble((1 - toInt((x as MutableMap<*, *>)["l"]["l_discount"]))) as MutableMap<String, Any?>))
                                                                                                   ^
/workspace/mochi/tests/machine/x/kotlin/group_by_multi_join_sort.kt:72:128: error: no get method providing array access
        __res.add((toDouble((x as MutableMap<*, *>)["l"]["l_extendedprice"]) * toDouble((1 - toInt((x as MutableMap<*, *>)["l"]["l_discount"]))) as MutableMap<String, Any?>))
                                                                                                                               ^
/workspace/mochi/tests/machine/x/kotlin/group_by_multi_join_sort.kt:75:3: error: unresolved reference: sumOf
}.sumOf { toInt(it) }, c_acctbal = g.key.c_acctbal, n_name = g.key.n_name, c_address = g.key.c_address, c_phone = g.key.c_phone, c_comment = g.key.c_comment))
  ^
/workspace/mochi/tests/machine/x/kotlin/group_by_multi_join_sort.kt:75:17: error: unresolved reference: it
}.sumOf { toInt(it) }, c_acctbal = g.key.c_acctbal, n_name = g.key.n_name, c_address = g.key.c_address, c_phone = g.key.c_phone, c_comment = g.key.c_comment))
                ^
/workspace/mochi/tests/machine/x/kotlin/group_by_multi_join_sort.kt:75:42: error: unresolved reference: c_acctbal
}.sumOf { toInt(it) }, c_acctbal = g.key.c_acctbal, n_name = g.key.n_name, c_address = g.key.c_address, c_phone = g.key.c_phone, c_comment = g.key.c_comment))
                                         ^
/workspace/mochi/tests/machine/x/kotlin/group_by_multi_join_sort.kt:75:68: error: unresolved reference: n_name
}.sumOf { toInt(it) }, c_acctbal = g.key.c_acctbal, n_name = g.key.n_name, c_address = g.key.c_address, c_phone = g.key.c_phone, c_comment = g.key.c_comment))
                                                                   ^
/workspace/mochi/tests/machine/x/kotlin/group_by_multi_join_sort.kt:75:94: error: unresolved reference: c_address
}.sumOf { toInt(it) }, c_acctbal = g.key.c_acctbal, n_name = g.key.n_name, c_address = g.key.c_address, c_phone = g.key.c_phone, c_comment = g.key.c_comment))
                                                                                             ^
/workspace/mochi/tests/machine/x/kotlin/group_by_multi_join_sort.kt:75:121: error: unresolved reference: c_phone
}.sumOf { toInt(it) }, c_acctbal = g.key.c_acctbal, n_name = g.key.n_name, c_address = g.key.c_address, c_phone = g.key.c_phone, c_comment = g.key.c_comment))
                                                                                                                        ^
/workspace/mochi/tests/machine/x/kotlin/group_by_multi_join_sort.kt:75:148: error: unresolved reference: c_comment
}.sumOf { toInt(it) }, c_acctbal = g.key.c_acctbal, n_name = g.key.n_name, c_address = g.key.c_address, c_phone = g.key.c_phone, c_comment = g.key.c_comment))
                                                                                                                                                   ^
/workspace/mochi/tests/machine/x/kotlin/group_by_multi_join_sort.kt:80:15: error: for-loop range must have an 'iterator()' method
    for (x in it) {
              ^
/workspace/mochi/tests/machine/x/kotlin/group_by_multi_join_sort.kt:81:29: error: unresolved reference. None of the following candidates is applicable because of receiver type mismatch: 
@InlineOnly public inline operator fun <@OnlyInputTypes K, V> Map<out String, Any?>.get(key: String): Any? defined in kotlin.collections
        __res.add((toDouble((x as MutableMap<*, *>)["it"]["l_extendedprice"]) * toDouble((1 - toInt((x as MutableMap<*, *>)["it"]["l_discount"]))) as MutableMap<String, Any?>))
                            ^
/workspace/mochi/tests/machine/x/kotlin/group_by_multi_join_sort.kt:81:58: error: no get method providing array access
        __res.add((toDouble((x as MutableMap<*, *>)["it"]["l_extendedprice"]) * toDouble((1 - toInt((x as MutableMap<*, *>)["it"]["l_discount"]))) as MutableMap<String, Any?>))
                                                         ^
/workspace/mochi/tests/machine/x/kotlin/group_by_multi_join_sort.kt:81:79: error: none of the following functions can be called with the arguments supplied: 
public final operator fun times(other: Byte): Double defined in kotlin.Double
public final operator fun times(other: Double): Double defined in kotlin.Double
public final operator fun times(other: Float): Double defined in kotlin.Double
public final operator fun times(other: Int): Double defined in kotlin.Double
public final operator fun times(other: Long): Double defined in kotlin.Double
public final operator fun times(other: Short): Double defined in kotlin.Double
        __res.add((toDouble((x as MutableMap<*, *>)["it"]["l_extendedprice"]) * toDouble((1 - toInt((x as MutableMap<*, *>)["it"]["l_discount"]))) as MutableMap<String, Any?>))
                                                                              ^
/workspace/mochi/tests/machine/x/kotlin/group_by_multi_join_sort.kt:81:101: error: unresolved reference. None of the following candidates is applicable because of receiver type mismatch: 
@InlineOnly public inline operator fun <@OnlyInputTypes K, V> Map<out String, Any?>.get(key: String): Any? defined in kotlin.collections
        __res.add((toDouble((x as MutableMap<*, *>)["it"]["l_extendedprice"]) * toDouble((1 - toInt((x as MutableMap<*, *>)["it"]["l_discount"]))) as MutableMap<String, Any?>))
                                                                                                    ^
/workspace/mochi/tests/machine/x/kotlin/group_by_multi_join_sort.kt:81:130: error: no get method providing array access
        __res.add((toDouble((x as MutableMap<*, *>)["it"]["l_extendedprice"]) * toDouble((1 - toInt((x as MutableMap<*, *>)["it"]["l_discount"]))) as MutableMap<String, Any?>))
                                                                                                                                 ^
/workspace/mochi/tests/machine/x/kotlin/group_by_multi_join_sort.kt:84:3: error: unresolved reference: sumOf
}.sumOf { toInt(it) } as Comparable<Any> }
  ^

 28: 
 29: val customer = mutableListOf(Customer(c_custkey = 1, c_name = "Alice", c_acctbal = 100, c_nationkey = 1, c_address = "123 St", c_phone = "123-456", c_comment = "Loyal"))
 30: 
